# labelforge

./: .env.example  .gitattributes  .gitignore  .vexpignore  CHANGELOG.md  CLAUDE.md  Dockerfile  PRD.md  README.md  compose.yml  docker-compose.dev.yml  docker-compose.yml  glossary.md  label-catalog.md  labels.yml  pyproject.toml  quick-print.md  standards.md  templates.md
.claude/: settings.json
.claude/commands/: release-cut.md  release-prep.md
.github/: dependabot.yml  pull_request_template.md
.github/workflows/: build-and-push.yml  ci.yml  cleanup-images.yml  codeql.yml
.vexp/: manifest.json
backend/labelforge/: __init__.py  bootstrap.py  config.py  db.py  history.py  logutil.py  main.py  settings_store.py
backend/tests/: conftest.py  test_app_smoke.py  test_media_override.py  test_reconcile.py  test_render_origin.py
docs/: CONTRIBUTING.md  PRD.md  architecture.md  decisions.md  glossary.md
docs/features/: api.md  history.md  label-catalog.md  printer-status.md  quick-print.md  settings.md  templates.md  version-update-check.md
frontend/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: api.js  api.ts  labels.ts  lastLabel.ts  main.js  main.ts  router.js  router.ts  style.css  types.ts  version.ts
prompts/: 2026-05-25-template-recall-ui.md  2026-06-03-template-preview-and-media-edit.md  2026-06-05-catalog-reconcile-on-upgrade.md  TEMPLATE.md
prompts/done/: 2026-05-26-printer-label-compatibility.md  2026-05-31-label-filter-by-loaded-media.md  2026-05-31-print-history-backend.md  (+21 more)
(+36 files in other folders)
