[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "labelforge"
version = "0.1.0"
description = "Self-hosted web app for printing labels to Brother QL series printers"
readme = "README.md"
requires-python = ">=3.12"
license = "GPL-3.0-or-later"
authors = [{ name = "crzykidd" }]

dependencies = [
    "fastapi>=0.136.3",
    "uvicorn[standard]>=0.32",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "pyyaml>=6.0",
    "pillow>=10.4",
    "qrcode[pil]>=8.0",
    "python-barcode>=0.15",
    "brother-ql-inventree>=1.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "httpx>=0.27",
    "ruff>=0.7",
    "mypy>=1.11",
    "types-PyYAML>=6.0",
]

[tool.hatch.build.targets.wheel]
packages = ["backend/labelforge"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "B", "UP"]

[tool.mypy]
python_version = "3.12"
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = ["brother_ql.*", "qrcode.*", "barcode.*"]
ignore_missing_imports = true
